--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "health-food-fullstack-app",
+  "type": "commonjs",
   "version": "1.0.0",
   "description": "MERN , Mongo , Express, React , NodeJs",
   "main": "index.js",
@@ -14,6 +15,7 @@
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-validator": "^6.9.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.11"
   },
